removed API for safety Reasons

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # .env
 # Add your Gemini API keys here, separated by commas.
 # Make sure there are no spaces around the commas.
-GEMINI_API_KEYS="AIzaSyDWz3jQ_qg2HSz1e1beMiAkxvDQSHNqD4Q,AIzaSyDrLKRsXnGOasVp0c-fPmJ6xk2d-43WDFI,AIzaSyAVfP6SdgNA5M7Jm8Ae9cntx2y_8oAqeCQ"
+GEMINI_API_KEYS="First_API,Second_API,Third_API"
